--- a/src/styles.css
+++ b/src/styles.css
@@ -36,18 +36,37 @@ ul.pagination {
 }
 
 #up {
-    width:50px;
-    height:50px;
+    width:35px;
+    height:35px;
     border-radius: 50%;
     position:fixed;
-    right:50px;
-    bottom: 50px;
+    right:10px;
+    bottom: 20px;
     background: #ff6600;
     color: white;
     box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.247);
     transition: .2s;
     cursor: pointer;
     z-index: 100;
+    font-size:20px;
+}
+
+@media only screen and (min-width: 974px) {
+    #up {
+        width:50px;
+        height:50px;
+        border-radius: 50%;
+        position:fixed;
+        right:50px;
+        bottom: 50px;
+        background: #ff6600;
+        color: white;
+        box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.247);
+        transition: .2s;
+        cursor: pointer;
+        z-index: 100;
+        font-size:30px;
+    }
 }
 
 #up:hover {
@@ -59,7 +78,7 @@ ul.pagination {
 }
 
 #up .fas {
-    font-size:30px;
+    
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
